RESOLVED FIXED120618
[BlackBerry] Scrolling and zooming is slow when Flash plugin visible
https://bugs.webkit.org/show_bug.cgi?id=120618
Summary [BlackBerry] Scrolling and zooming is slow when Flash plugin visible
Arvid Nilsson
Reported 2013-09-02 23:58:10 PDT
Rendering of Flash plugin triggers an old workaround for a graphics driver bug. The workaround is no longer needed.
Attachments
Patch (2.64 KB, patch)
2013-09-03 00:38 PDT, Arvid Nilsson
no flags
Patch (2.69 KB, patch)
2013-09-04 01:23 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2013-09-03 00:38:21 PDT
Jacky Jiang
Comment 2 2013-09-03 11:04:14 PDT
Comment on attachment 210332 [details] Patch LGTM, r+ internally.
Arvid Nilsson
Comment 3 2013-09-04 01:23:14 PDT
Arvid Nilsson
Comment 4 2013-09-13 11:01:13 PDT
Thanks Anders :)
WebKit Commit Bot
Comment 5 2013-09-13 11:09:48 PDT
Comment on attachment 210437 [details] Patch Clearing flags on attachment: 210437 Committed r155712: <http://trac.webkit.org/changeset/155712>
WebKit Commit Bot
Comment 6 2013-09-13 11:09:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.