[BlackBerry] Scrolling and zooming is slow when Flash plugin visible https://bugs.webkit.org/show_bug.cgi?id=120618

Reviewed by Anders Carlsson.
Internally reviewed by Jacky Jiang.

JIRA 490823
Compositing Flash plugin content triggered a workaround for a graphics
driver quirk. The workaround was actually related to WebGL, not Flash,
back when we used glCopyTexImage to implement WebGL double buffering
(see PR 148933 and 150228 for more details of the old implementation).

Originally, both WebGL and plugin layers added themselves to the
LayerRenderer::m_layersLockingTextureResources list. Now only plugin
layers use this list.
The glCopyTexImage code was removed long ago, and WebGL now uses the
EGLImage-based double buffering approach implemented in
EGLImageLayerWebKitThread and EGLImageLayerCompositingThreadClient.

Fixed by removing the now obsolete workaround, a call to "glFinish".
This considerably improves the frame rate of zooming and scrolling when
Flash content is visible.

Improvement in frame rate not appropriate to test using layout tests,
could easily result in flaky test.

* platform/graphics/blackberry/LayerRenderer.cpp:
(WebCore::LayerRenderer::compositeLayers):


Canonical link: https://commits.webkit.org/139269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155712 268f45cc-cd09-0410-ab3c-d52691b4dbfc